--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
+  "name": "practice-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://arthurkorchak.github.io/practice-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
